--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<img src="Greenies.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">Greenies Eco Friendly App</h5>
-						  <p class="card-text">Now, what is Greenies? This project began with our group's interest in the cosmetics and beauty industry. Particularly in eco-friendly beauty products and green-washing.</p>
+						  <p class="card-text">This project began with our group's interest in the eco-friendly industry. Our app was created to help users find recomended eco-friendly beauty products.</p>
 						  <a href="https://www.figma.com/proto/rRLUMdmsDPIfec1gzRJOxb/Greenies?page-id=206%3A2286&node-id=206%3A2286&viewport=832%2C572%2C0.17&scaling=scale-down&starting-point-node-id=206%3A2514" class="btn btn-primary">Go</a>
 						</div>
 					</div>
@@ -146,15 +146,15 @@
 						<img src="Yolo-Prioritization Matrix.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">YOLO Prioritization Matrix</h5>
-						  <p class="card-text">My Feature Prioritization Chart here explains the stragegies which helped me determine the app features and each priority demands so I could have a better idea on which features to use and others I could toss.</p>
+						  <p class="card-text">My Feature Prioritization Chart shares the priority demands which helped me decide which features to prioritize, which could wait and which I might toss.</p>
 						  <a href="https://docs.google.com/presentation/d/17INoCP18tGVddmBhFC73DU3GYth_9k9m/edit?usp=share_link&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
 						<img src="SpaceCadet-Project.png" class="card-img-top" alt="...">
 						<div class="card-body">
-						  <h5 class="card-title">SpaceCadet User Insight/Problem</h5>
-						  <p class="card-text">Users are looking for a quick and convenient find rental spaces to host pop-up events for their small businesses. It is very hard to find an available space that meets the users need.</p>
+						  <h5 class="card-title">SpaceCadet User Insight</h5>
+						  <p class="card-text">Users are looking for a quick and convenient find rental spaces to host pop-up events for their small businesses.</p>
 						  <a href="https://docs.google.com/presentation/d/185_tjhBhYrPD54PKTuvF0PAvfgo9q2Ox/edit?usp=sharing&ouid=115912331095485383993&rtpof=true&sd=true" class="btn btn-primary">Go</a>
 						</div>
 					</div>
@@ -168,7 +168,7 @@
 						<img src="Greenies-UsabilityTest.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">Greenies Usability Testing</h5>
-						  <p class="card-text">We used UsabilityHub and created two 5 second questions to gain user insight. After a 5 sec viewing of the image, we asked users what stood out. Then asked them to click where they would go to find more product information. The image on the right is the heat map of where users clicked.</p>
+						  <p class="card-text">We used UsabilityHub to create two 5 second questions to gain user insight. The image on the right is a heat map where users clicked to find more product info.</p>
 						  <a href="https://docs.google.com/presentation/d/1uUx7WIXaSPsk9INjo6RS39XCn1ai50wQNaRLTl5E_Uw/edit?usp=share_link" class="btn btn-primary">Go</a>
 						</div>
 					</div>
@@ -217,27 +217,27 @@
 			<div class="d-flex justify-content-center">
 		  		<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
-						<div class="card-body">
-						  <h5 class="card-title">Salt & Light Path</h5>
-						  <p class="card-text">Currently </p>
-						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
-						</div>
-					</div>
-					<div class="card" style="width: 18rem;">
 						<img src="The Winters Challenge.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">The Winters Challenge</h5>
 						  <p class="card-text">Maintinging the Winters Challenge website and completing research for ways to improve and redesign for better service and scheduling purposes.</p>
-						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						  <a href="https://thewinterschallenge.business.site" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Salt & Light Path</h5>
+						  <p class="card-text">Maintinging the Salt & Light Path website and completing research for ways to improve and redesign to highlight special topics and events.</p>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
 						<img src="IMVU-3.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">IMVU</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="#" class="btn btn-primary">Go</a>
+						  <p class="card-text">As a Product Designer, I developed products for the IMVU Avatar Characters. Completed Interview Research and data analysis for each project. Placed in top sales in August of 2007.</p>
+						  <a href="https://www.imvu.com/shop/product.php?products_id=625426" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
@@ -247,27 +247,27 @@
 			<div class="d-flex justify-content-center">
 		  		<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
-						<div class="card-body">
-						  <h5 class="card-title">Salt & Light Path</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
-						</div>
-					</div>
-					<div class="card" style="width: 18rem;">
 						<img src="The Winters Challenge.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">The Winters Challenge</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						  <p class="card-text">Maintinging the Winters Challenge website and completing research for ways to improve and redesign for better service and scheduling purposes.</p>
+						  <a href="https://thewinterschallenge.business.site" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">Salt & Light Path</h5>
+						  <p class="card-text">Maintinging the Salt & Light Path website and completing research for ways to improve and redesign to highlight special topics and events.</p>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
 						<img src="IMVU-3.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">IMVU</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="#" class="btn btn-primary">Go</a>
+						  <p class="card-text">As a Product Designer, I developed products for the IMVU Avatar Characters. Completed Interview Research and data analysis for each project. Placed in top sales in August of 2007.</p>
+						  <a href="https://www.imvu.com/shop/product.php?products_id=620385" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
@@ -277,27 +277,27 @@
 			<div class="d-flex justify-content-center">
 				<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
-						<div class="card-body">
-						  <h5 class="card-title">Salt & Light Path</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
-						</div>
-					</div>
-					<div class="card" style="width: 18rem;">
 						<img src="The Winters Challenge.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">The Winters Challenge</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						  <p class="card-text">Maintinging the Winters Challenge website and completing research for ways to improve and redesign for better service and scheduling purposes.</p>
+						  <a href="https://thewinterschallenge.business.site" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">alt & Light Path</h5>
+						  <p class="card-text">Maintinging the Salt & Light Path website and completing research for ways to improve and redesign to highlight special topics and events.</p>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 					<div class="card" style="width: 18rem;">
 						<img src="IMVU-3.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">IMVU</h5>
-						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						  <a href="#" class="btn btn-primary">Go</a>
+						  <p class="card-text">As a Product Designer, I developed products for the IMVU Avatar Characters. Completed Interview Research and data analysis for each project. Placed in top sales in August of 2007.</p>
+						  <a href="https://www.imvu.com/shop/product.php?products_id=597542" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
@@ -329,19 +329,19 @@
 			<div class="d-flex justify-content-center">
 		  		<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
-						<div class="card-body">
-						  <h5 class="card-title">The Salt & Light Path App</h5>
-						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
-						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
-						</div>
-					</div>
-					<div class="card" style="width: 18rem;">
 						<img src="The Winters Challenge App.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">The Winters Challenge App</h5>
 						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other challenges that are available.</p>
 						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Salt & Light Path App</h5>
+						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
@@ -351,19 +351,19 @@
 			<div class="d-flex justify-content-center">
 		  		<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
-						<div class="card-body">
-						  <h5 class="card-title">Salt & Light Path App</h5>
-						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
-						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
-						</div>
-					</div>
-					<div class="card" style="width: 18rem;">
 						<img src="The Winters Challenge App.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">The Winters Challenge App</h5>
 						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other challenges that are available.</p>
 						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Salt & Light Path App</h5>
+						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
@@ -375,8 +375,8 @@
 					<div class="card" style="width: 18rem;">
 						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
 						<div class="card-body">
-						  <h5 class="card-title">Salt & Light Path App</h5>
-						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events for raise money for the poor, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
+						  <h5 class="card-title">The Salt & Light Path App</h5>
+						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
 						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
