--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			  </a>
 			  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 				<a class="dropdown-item" href="#">About Me</a>
-				<a class="dropdown-item" href="https://drive.google.com/file/d/1LUMuMxYMcMJGZeahXQcPENzN3b3eCGwa/view?usp=sharing">Resume</a>
+				<a class="dropdown-item" href="https://drive.google.com/file/d/1lbdRemYlmtyL3Gg1R2Z3wowAqdHB3bPz/view?usp=share_link">Resume</a>
 				<a class="dropdown-item" href="https://www.linkedin.com/in/moniquewintersdesign/">LinkedIn</a>
 			  </div>
 			</li>
@@ -287,7 +287,7 @@
 					<div class="card" style="width: 18rem;">
 						<img src="Salt & Light Path.png" class="card-img-top" alt="...">
 						<div class="card-body">
-						  <h5 class="card-title">alt & Light Path</h5>
+						  <h5 class="card-title">Salt & Light Path</h5>
 						  <p class="card-text">Maintinging the Salt & Light Path website and completing research for ways to improve and redesign to highlight special topics and events.</p>
 						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
