--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 						<img src="The Winters Challenge App.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">The Winters Challenge App</h5>
-						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other challenges that are available.</p>
+						  <p class="card-text">This app will allow our users to set-up goals based on their Challenge Event level. Our app will have a steps tracker and other fitness features to allow users to record their progress and prepare for the next event.</p>
 						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
 						</div>
 					</div>
@@ -354,7 +354,7 @@
 						<img src="The Winters Challenge App.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">The Winters Challenge App</h5>
-						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other challenges that are available.</p>
+						  <p class="card-text">This app will allow our users to set-up goals based on their Challenge Event level. Our app will have a steps tracker and other fitness features to allow users to record their progress and prepare for the next event.</p>
 						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
 						</div>
 					</div>
@@ -373,19 +373,19 @@
 			<div class="d-flex justify-content-center">
 				<div class="cards-wrapper">
 					<div class="card" style="width: 18rem;">
-						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
-						<div class="card-body">
-						  <h5 class="card-title">The Salt & Light Path App</h5>
-						  <p class="card-text">This app will allow our users to find a way to help the community such as searching for upcoming marathon events, Donating Interview clothes to the poor and watching progress on how their donations helped.</p>
-						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
-						</div>
-					</div>
-					<div class="card" style="width: 18rem;">
 						<img src="The Winters Challenge App.png" class="card-img-top" alt="...">
 						<div class="card-body">
 						  <h5 class="card-title">The Winters Challenge App</h5>
-						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other fun challenges that are available that will help raise money for the poor.</p>
+						  <p class="card-text">This app will allow our users to sign up for our challenges such as Marathon events, Opbstacle Courses and other challenges that are available.</p>
 						  <a href="https://thewinterschallenge.business.site/" class="btn btn-primary">Go</a>
+						</div>
+					</div>
+					<div class="card" style="width: 18rem;">
+						<img src="Salt & Light Path App.png" class="card-img-top" alt="...">
+						<div class="card-body">
+						  <h5 class="card-title">The Salt & Light Path App</h5>
+						  <p class="card-text">This app will allow our users to set-up goals based on their Challenge Event level. Our app will have a steps tracker and other fitness features to allow users to record their progress and prepare for the next event.</p>
+						  <a href="https://saltandlightpath.godaddysites.com" class="btn btn-primary">Go</a>
 						</div>
 					</div>
 				</div>
